refractor : 코드 정리